--- a/app-b2b.html
+++ b/app-b2b.html
@@ -28,11 +28,11 @@ var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPL
 var myCreole;
 
 var app = {vars:{
-	"release":"201314.a",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"201318.a",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
 	"checkoutAuthMode" : "required", //can be passive, active or required
 	"baseURL":"",
-	"testURL":"http://www.sporks.zoovy.com/"
+	"testURL":"http://www.ylh.zoovy.com/"
 	},u:{},rq:[]};
 
 //set base url so images, css, js, etc all load from appropriate location once deployed.
@@ -73,7 +73,7 @@ app.u.loadScript(app.vars.baseURL+"app-b2b-init.js");
 <div id='appPreView' class='ui-widget ui-widget-content ui-corner-all stdPadding'>
 <table>
 <tr>
-	<td><div class='marginRight'>YOUR LOGO HERE</div></td>
+	<td><div class='marginRight'><!-- PUT YOUR LOGO HERE --></div></td>
 	<td>
 	<div class='marginLeft'>
 		<div id="loader">
@@ -99,7 +99,7 @@ app.u.loadScript(app.vars.baseURL+"app-b2b-init.js");
 <div id='appView' class='displayNone'>
 
 	<div id='mastHead' class='clearfix'>
-		<div class='floatLeft pointer' onClick="showContent('homepage',{});">YOUR LOGO HERE</div>
+		<div class='floatLeft pointer logo' onClick="showContent('homepage',{});"></div>
 		<div class='floatRight menu alignRight'>
 
 <a href='#cart?show=inline' class='bindByAnchor'>Cart</a> | 
@@ -190,6 +190,8 @@ the homepageTemplate template is loaded into mainContentArea by default when the
 	
 	<ul data-bind="var: category(@subcategoryDetail); format: categoryList; extension: store_navcats; loadsTemplate: categoryListTemplate; detail:max;" class='listStyleNone fluidList clearfix noPadOrMargin categoryList'></ul>
 
+
+	<ul data-bind="var: category(@products); format: productList; editor: finder; extension: store_prodlist; loadsTemplate: productListTemplate; hide_summary:1; before:<h2>Featured Items</h2>; withReviews:1;" class='listStyleNone fluidList clearfix noPadOrMargin productList'></ul>
 
 </div>
 
@@ -1476,7 +1478,7 @@ The 'data-action' attribute is used to assign an onclick.
 
 
 
-<table class='orderContentsTable' data-app-role='invoiceContainer' id='invoiceTemplate'>
+<table class='orderContentsTable fullWidth' data-app-role='invoiceContainer' id='invoiceTemplate'>
 <tr>
 	<td colspan='2'>
 <div class='floatRight'>
@@ -1494,8 +1496,7 @@ The 'data-action' attribute is used to assign an onclick.
 <!-- print icon -->
 
 
-<!-- <h2 data-bind='var:order(bill/firstname);format:text; pretext:Shipping Status: ;'></h2> -->
-
+<h3 class='orderID' data-bind='var:order(order/our/orderid);format:text;'></h3>
 <h5 class='orderTotal' data-bind='var:order(order/sum/order_total);format:money; currencySign: $;  hideZero:false; pretext:Order Total: ;'></h5>
 <h5 class='balanceDue' data-bind='var:order(order/sum/balance_due_total);format:money; currencySign: $;  hideZero:false; pretext:Balance Due: ;'></h5>
 </hgroup>
@@ -1534,7 +1535,9 @@ The 'data-action' attribute is used to assign an onclick.
 	</td>
 	<td class='orderContentsProdlistContainer'>
 	<ul data-bind='var:order(order/tracking); format:orderTrackingLinks; extension:store_crm;before:<h4>Shipping:</h4>;' class='displayNone noListStyle marginBottom'></ul>
-	<ul data-bind="var: order(order/@ITEMS); format:stuffList; loadsTemplate:chkoutInvoiceItemTemplate;" class='listStyleNone lineItemProdlist'></ul>
+	<table  class='listStyleNone lineItemProdlist fullWidth'>
+		<tbody data-bind="var: order(order/@ITEMS); format:stuffList; loadsTemplate:chkoutInvoiceItemTemplate;"></tbody>
+	</table>
 	</td>
 </tr>
 </table>
