--- a/app-fashion.html
+++ b/app-fashion.html
@@ -20,17 +20,17 @@ var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPL
 var myCreole;
 
 var app = {vars:{
-	"release":"201314.a",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"201318.a",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
 	"checkoutAuthMode" : "active", //can be passive, active or required
 	"baseURL":"",
-	"testURL":"http://www.sporks.zoovy.com/" //put your domain here. you can then test locally in firefox.
+	"testURL":"http://ylh.zoovy.com/" //put your domain here. you can then test locally in firefox.
 	},u:{},rq:[]};
 
 //set base url so images, css, js, etc all load from appropriate location once deployed.
 //baseURL as blank lets loadScript function run off local copy when testing locally.
 if(document.location.protocol != 'file:')	{
-	app.vars.baseURL  = "https:" == document.location.protocol ? app.vars.httpsURL : app.vars.httpURL;
+	app.vars.baseURL  = "/";
 	document.getElementsByTagName('base')[0].href = app.vars.baseURL;
 	}
 </script>
@@ -60,7 +60,7 @@ app.u.loadScript(app.vars.baseURL+"app-fashion-init.js");
 
 <!-- what is displayed onLoad until the view is loaded -->
 <div id='appPreView'>
-	<div class='logo'><img src="app-fashion/logo-375x52.jpg" width='375' height='52' alt='' /></div>
+	<div class='logo'><!-- PUT YOUR LOGO HERE --></div>
 	<div id="loader" class='alignCenter'>
 		<h3>Loading Your Shopping Experience</h3>
 
@@ -94,7 +94,7 @@ app.u.loadScript(app.vars.baseURL+"app-fashion-init.js");
     	</div>
         
         <div class='logoSearchContainer clearfix'>
-        	<div id='logo'><a href='#!homepage' class='bindByAnchor'><img src="app-fashion/logo-375x52.jpg" width='375' height='52' alt='' /></a></div>
+        	<div id='logo' onClick="showContent('homepage');" class='logo pointer'></div>
         	<div class='searchBarContainer'>
 				<form name='headerSearchFrm' action='#' class='productSearchForm' method="get" id="searchFunc">
 					<input type='search' name='KEYWORDS' class="productSearchKeyword handleDefault" placeholder="Find it here..." id="searchBar"/>
@@ -197,8 +197,9 @@ uncomment and set links
 		-->
     </div>
         
-    <div id='footerInformation'>
-        <a>2012 All Rights Reserved. eCommerce by</a> Zoovy
+    <div id='footerInformation' class='clearfix'>
+<div class='floatLeft'>Copyright &copy; 2012 All Rights Reserved.</div>
+<div class='floatRight'><a href='http://www.zoovy.com' target="_blank">eCommerce by Zoovy</a></div>
     </div>
 
 
@@ -1462,17 +1463,17 @@ The 'data-action' attribute is used to assign an onclick.
 <address id='billAddressTemplate' class='ui-widget ui-widget-content ui-corner-all marginBottom '>
 	<button data-app-event="myRIA|showBuyerAddressUpdate" class='floatRight'>edit</button>
 	<div class='addressFullname'>
-		<span data-bind="var: address(bill_firstname);format:text;"  title='first name'></span>
-		<span data-bind="var: address(bill_lastname);format:text;"  title='last name'></span>
+		<span data-bind="var: address(bill/firstname);format:text;"  title='first name'></span>
+		<span data-bind="var: address(bill/lastname);format:text;"  title='last name'></span>
 	</div>
 	<div class='address'>
-		<div data-bind="var: address(bill_address1);format:text;"  title='address'></div>
-		<div data-bind="var: address(bill_address2);format:text;"  title='address 2'></div>
+		<div data-bind="var: address(bill/address1);format:text;"  title='address'></div>
+		<div data-bind="var: address(bill/address2);format:text;"  title='address 2'></div>
 
-		<span data-bind="var: address(bill_city);format:text;"  title='city'></span>,
-		<span data-bind="var: address(bill_region);format:text;"  title='state'></span>.
-		<span data-bind="var: address(bill_postal);format:text;"  title='zip'></span>
-		<div data-bind="var: address(bill_countrycode);format:text;" title='country'></div>
+		<span data-bind="var: address(bill/city);format:text;"  title='city'></span>,
+		<span data-bind="var: address(bill/region);format:text;"  title='state'></span>.
+		<span data-bind="var: address(bill/postal);format:text;"  title='zip'></span>
+		<div data-bind="var: address(bill/countrycode);format:text;" title='country'></div>
 
 	</div>
 
@@ -1502,7 +1503,7 @@ The 'data-action' attribute is used to assign an onclick.
 
 
 
-<table class='orderContentsTable' data-app-role='invoiceContainer' id='invoiceTemplate'>
+<table class='orderContentsTable fullWidth' data-app-role='invoiceContainer' id='invoiceTemplate'>
 <tr>
 	<td colspan='2'>
 <div class='floatRight'>
@@ -1517,11 +1518,7 @@ The 'data-action' attribute is used to assign an onclick.
 <tr>
 	<td>
 <hgroup class='marginBottom'>
-<!-- print icon -->
-
-
-<!-- <h2 data-bind='var:order(bill/firstname);format:text; pretext:Shipping Status: ;'></h2> -->
-
+<h3 class='orderID' data-bind='var:order(order/our/orderid);format:text;'></h3>
 <h5 class='orderTotal' data-bind='var:order(order/sum/order_total);format:money; currencySign: $;  hideZero:false; pretext:Order Total: ;'></h5>
 <h5 class='balanceDue' data-bind='var:order(order/sum/balance_due_total);format:money; currencySign: $;  hideZero:false; pretext:Balance Due: ;'></h5>
 </hgroup>
@@ -1560,7 +1557,7 @@ The 'data-action' attribute is used to assign an onclick.
 	</td>
 	<td class='orderContentsProdlistContainer'>
 	<ul data-bind='var:order(order/tracking); format:orderTrackingLinks; extension:store_crm;before:<h4>Shipping:</h4>;' class='displayNone noListStyle marginBottom'></ul>
-	<table  class='listStyleNone lineItemProdlist'>
+	<table  class='listStyleNone lineItemProdlist fullWidth'>
 		<tbody data-bind="var: order(order/@ITEMS); format:stuffList; loadsTemplate:chkoutInvoiceItemTemplate;"></tbody>
 	</table>
 	</td>
@@ -1676,6 +1673,11 @@ The 'data-action' attribute is used to assign an onclick.
 	</ul>
 	</li>
 </ul>
+	</td>
+	
+	
+	<td>
+	<input type='text' onBlur="app.model.destroy($(this).val()); $(this).val('');" placeholder='destroy' />
 	</td>
 </tr>
 </table>
