--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ the homepageTemplate template is loaded into mainContentArea by default when the
 
 	<div data-bind="var: category(%page.testStr); format: text;"></div>
 	<div data-bind="var: category(%page.testObj); format: printTestObjStr; extension:store_gkworld;"></div>
-	<div data-bind="var: category(%page.testStr); format: printTestArrStr; index:0; extension:store_gkwrold;"></div>
+	<div data-bind="var: category(%page.testArr); format: printTestArrStr; index:0; extension:store_gkwrold;"></div>
 
 	<div class="bannerContainer">
 
