added test int data-bind

--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@ the homepageTemplate template is loaded into mainContentArea by default when the
 <div id='homepageTemplate' class='homeTemplate'>
 
 	<div data-bind="var: category(%page.testStr); format: text;"></div>
+	<div data-bind="var: category(%page.testInt); format: text;"></div>
 	<div data-bind="var: category(%page.testObj); format: printTestObjStr; extension:store_gkworld;"></div>
 	<div data-bind="var: category(%page.testArr); format: printTestArrStr; index:0; extension:store_gkwrold;"></div>
 
