--- a/extensions/admin/orders.html
+++ b/extensions/admin/orders.html
@@ -376,6 +376,7 @@ That'll allow us to easily change the viewer from a modal to a plain dialog to a
 	</div>
 
 	<div class='leftCol'>
+	<h2>Transaction History</h2>
 	<table class='gridTable marginBottom'>
 	<thead>
 	<tr>
