--- a/extensions/admin/reports.html
+++ b/extensions/admin/reports.html
@@ -49,3 +49,210 @@
 </form>
 
 </div>
+
+
+
+
+
+
+
+
+
+
+
+<div id='KPIGraphAddEditTemplate' class='KPIGraphAddEditContainer'>
+
+<form onsubmit="return false;" class='labelsAsBreaks'>
+
+<figure class='floatRight displayNone' data-app-role='graphTypePreview'>
+  <figcaption>Graph Type Preview: <span class='graphType'></span></figcaption>
+  <img src='blank.gif' width='300' height='104' alt='' />
+</figure> 
+
+
+
+<div class='label'><input type='text' size='40' placeholder='graph title' required='required' name='title' /> <span class='toolTip' title="Will be used in the graph display. If this graph is intended for your launchpad, keep the title short.">?</span></div>
+
+<div class='label'><select name='collection' required='required'>
+	<option selected='selected' disabled='disabled'>graph location</option>
+	<option>launchpad</option><!-- if selected, remove 'size' option. add tile group option -->
+	<optgroup label="KPI">
+		<option>Collection 1</option>
+		<option>Collection 2</option>
+		<option>Collection 3</option>
+		<option>Collection 4</option>
+	</optgroup>
+	<!-- this is dynamically generated -->
+</select>
+<span class='toolTip' title="Determines where the graph will appear.">?</span>
+</div>
+
+<div class='label'>
+<select name='graph' data-app-event="admin_reports|addTriggerKPIGraphTypeChange">
+	<option value='' selected='selected' disabled='disabled'>graph type</option>
+	<option value='area'>Area</option>
+	<option value='area.stacked'>Area - Stacked</option>
+	<option value='area.percent'>Area - Stacked Percentage</option>
+	<option value='bar'>Horizontal Bar Graph</option>
+	<option value='bar.stacked'>Horizontal Bar Graph - Stacked</option>
+	<option value='bar.percent'>Horizontal Bar Graph - Stacked Percentage</option>
+	<option value='column'>Vertical Column Graph</option>
+	<option value='column.stacked'>Vertical Column Graph - Stacked</option>
+	<option value='column.percent'>Vertical Column Graph - Stacked Percentage</option>
+	<option value='areaspline'>Area Spline</option>
+	<option value='line'>Line Graph</option>
+	<option value='pie'>Pie Chart</option>
+	<option value='text'>Quickstats (text)</option>
+</select>
+</div>
+
+
+<div class='label'>
+	<div class='label'>Data Columns:</div>
+	
+	<label><input type='radio' name='dataColumns' value='dynamic' data-app-event="admin_reports|addTriggerKPIDataColumnsChange" /> Dynamic <span class='toolTip' title="Will provide a fixed set of data choices displayed with a predetermined number of columns.">?</span></label>
+	
+	<label><input type='radio' name='dataColumns' value='fixed' data-app-event="admin_reports|addTriggerKPIDataColumnsChange" /> Fixed <span class='toolTip' title="Allows you more flexibility on the data source and how many columns appear in the graph.">?</span></label>
+</div>
+
+
+<div class='label'>
+<select name='period' data-app-event="admin_reports|addTriggerKPIPeriodChange">
+	<option selected='selected' disabled='disabled'>period</option>
+	<optgroup label='daily' >
+		<option value='day.today'>Today</option>
+		<option value='day.yesterday'>Yesterday</option>
+		<option value='days.7'>Last 7 Days</option>
+		<option value='days.10'>Last 10 Days</option>
+		<option value='days.14'>Last 14 Days</option>
+		<option value='days.21'>Last 21 Days</option>
+		<option value='days.28'>Last 28 Days</option>
+		<option value='days.90'>Last 90 Days</option>
+	</optgroup>
+	
+	<optgroup label='weekly' >
+		<option value='week.this'>This Week</option>
+		<option value='week.tly'>This Week Last Year</option>
+		<option value='week.last'>Last Week</option>
+		<option value='weeks.1'>This Week + 1 Prior</option>
+		<option value='weeks.2'>This Week + 2 Prior</option>
+		<option value='weeks.3'>This Week + 3 Prior</option>
+		<option value='weeks.4'>This Week + 4 Prior</option>
+		<option value='weeks.5'>This Week + 5 Prior</option>
+		<option value='weeks.6'>This Week + 6 Prior</option>
+		<option value='weeks.7'>This Week + 7 Prior</option>
+		<option value='weeks.8'>This Week + 8 Prior</option>
+	
+	</optgroup>
+	
+	<optgroup label='monthly' >
+		<option value='month.this'>This Month</option>
+		<option value='month.tly'>This Month Last Year</option>
+		<option value='month.last'>Last Month</option>
+		<option value='months.1'>This Month + 1 Prior</option>
+		<option value='months.2'>This Month + 2 Prior</option>
+		<option value='months.3'>This Month + 3 Prior</option>
+	</optgroup>
+	
+	<optgroup label='quarterly' >
+		<option value='quarter.this'>This Quarter</option>
+		<option value='quarter.tly'>This Quarter Last Year</option>
+		<option value='quarter.last'>Last Quarter</option>
+	</optgroup>
+	
+	<optgroup label='Annual'>
+		<option value='ytd.this'>Year-To-Date</option>
+		<option value='ytd.last'>Last Year</option>
+	</optgroup>
+</select>
+<span class='toolTip' title="How long of a time period the graph should encompass. This selection determines which grouping is available.">?</span>
+</div>
+
+<div class='label'>
+<select name='grpby' disabled='disabled'>
+	<option selected='selected' disabled='disabled' value=''>grouping</option>
+	<option value='none'>None (Merge Datasets)</option>
+	<option value='day'>Date: Day (Full Detail)</option>
+	<option value='week'>Date: Week</option>
+	<option value='month'>Date: Month</option>
+	<option value='quarter'>Date: Quarter</option>
+	<option value='dow'>Date: Day of Week</option>
+</select>
+<span class='toolTip' title="Dependant on the 'period' being selected. Determines how the data is grouped.">?</span>
+</div>
+
+
+
+
+<div class='label displayNone' data-app-role='datasetTypeContainer'>
+	<div class='label'>Data:</div>
+	
+	<label><input type='radio' name='dataColumns' value='1' /> Gross Sales</label>
+	<label><input type='radio' name='dataColumns' value='2' /> # Orders</label>
+	<label><input type='radio' name='dataColumns' value='3' /> # Units Sold</label>
+	
+</div>
+
+
+<!-- if datacolumns is set to dynamic, show this: -->
+<div class='label displayNone' data-app-role='dDatasetContainer'>
+<select name='ddataset'>
+	<option selected='selected' disabled="disabled">Data Source</option>
+	<option value='PRTS?c=1&amp;ctype=$'>By Partitions</option>
+	<option value='SCHEDULES?c=1&amp;ctype=$'>By Schedules</option>
+	<option value='DOMAINS?c=1&amp;ctype=$' >By Domains</option>
+	<option value='TAGS?c=1&amp;ctype=$'>By Tags</option>
+	<option value='MARKETS?c=1&amp;ctype=$'>By Integrations</option>
+</select>
+</div>
+
+
+
+<div data-app-role='fDatasetContainer' class='label displayNone'>
+<select name='datasetGrp' data-app-event="admin_reports|addTriggerKPIDatasetChange">
+	<option>Dataset By</option>
+	<option value='global'>All Domains/Partitions</option>
+	<option value='affiliate'>Affiliate</option>
+	<option value='coupon'>Coupon</option>
+	<option value='crm'>CRM</option><!-- returns -->
+	<option value='domain'>Domain</option>
+	<option value='mfg'>Manufacturer</option>
+	<option value='mkt'>Marketplace / Syndication</option>
+	<option value='partition'>Partition</option>
+	<option value='prodtag'>Product Tag</option>
+	<option value='supplier'>Supplier</option>
+</select>
+</div>
+
+
+<div data-app-role='axisChooser' class='label displayNone'>
+<table>
+<tr>
+	<td class='ui-widget-content valignTop'>
+	<div class='ui-widget-header ui-widget-header-padding'>Your Domains:</div>
+	<ul class='kpiSortable'>
+		<li>domain 1</li>
+		<li>domain 2</li>
+		<li>domain 3</li>
+		<li>domain 4</li>
+		<li>domain 5</li>
+		<li>domain 6</li>
+	</ul>
+	</td>
+	
+	<td class='ui-widget-content valignTop'>
+	<div class='ui-widget-header ui-widget-header-padding'>Graph Data/Order:</div>
+	<ul class='kpiSortable' data-app-role='dataSetAxisList'>
+	</ul>
+	</td>
+</tr>
+</table>
+</div>
+
+
+<button data-app-event="admin_reports|execAdminKPIDBCollectionUpdate">Save</button>
+
+</form>
+
+</div>
+
