--- a/extensions/admin/support.html
+++ b/extensions/admin/support.html
@@ -10,3 +10,280 @@
 </form>
 
 </div>
+
+
+
+<div id='supportPageTemplate' class='page pageUser' data-app-role='dualModeContainer' data-app-mode='list'>
+
+	<section class='dualModeDetailContainer' data-app-role='dualModeDetail' data-dualmode-widthpercent='70'></section>
+
+	<section class='dualModeListContainer' data-app-role='dualModeList'>
+		<div class='ui-widget-header ui-corner-top'>
+			<div class='buttonSet'>
+				<button data-app-event='admin_support|showTicketCreate' class='hideInDetailMode'>Create A New Ticket</button>
+				<button data-app-event='admin|toggleDualMode'>Toggle between list and detail view</button>
+			</div>
+			<h3 class='heading'>Ticket Disposition: <select name='disposition' data-app-event='admin_support|execTicketListDispositionChange'>
+				<option value='open'>Open</option>
+				<option value='waiting'>Waiting</option>
+				<option value='all'>All</option>
+			</select>
+			</h3>
+		</div>
+
+		<div class='ui-widget-content ui-corner-bottom'>
+		<table class='gridTable fullWidth marginBottom' >
+		<!-- thead is needed, whether visible or not, so that the data-name attributes can be used to look up column # -->
+		<thead>
+		<tr>
+			<th class='alignLeft hideInDetailMode'></th>
+			<th class='alignLeft'>Ticket #</th>
+			<th class='alignLeft hideInDetailMode'>Opened</th>
+			<th class='hideInDetailMode alignLeft'>Last Update</th>
+			<th class='alignLeft'>Subject</th>
+			<th class='alignLeft hideInDetailMode'>User</th>
+			<th class='alignLeft hideInDetailMode'>Date Closed</th>
+			<th></th>
+		</tr>
+		</thead>
+		<tbody data-bind="var: users(@TICKETS); format:processList; loadsTemplate:supportTicketRowTemplate;" class='dualModeList' data-app-role='dualModeListContents'></tbody>
+		</table>
+		</div>
+	</section>
+</div>
+
+
+
+
+<table>
+
+	<tr id='supportTicketRowTemplate' data-bind='useParentData:true; format: ticketRowClass; extension: admin_support;'>
+		<td class='hideInDetailMode' data-bind="var: ticket(DISPOSITION); format:text;"></td>
+		<td data-bind="var: ticket(ID); format:text;"></td>
+		<td class='hideInDetailMode' data-bind="var: ticket(CREATED_GMT); format:epoch2pretty;"></td>
+		<td class='hideInDetailMode' data-bind="var: ticket(LAST_FOLLOWUP); format:text;" data-app-event='admin_support|showTicketLastUpdate'></td>
+		<td data-bind="var: ticket(SUBJECT); format:text;"></td>
+		<td class='hideInDetailMode' data-bind="var: ticket(LUSER); format:text;"></td>
+		<td class='hideInDetailMode' data-bind="var: ticket(CLOSED_GMT); format:epoch2pretty;"></td>
+		
+		<td class='alignRight'>
+		<button data-app-event="admin_support|execTicketClose" class='hideInDetailMode'>Close Ticket</button>
+		<button data-app-event="admin_support|showTicketDetail">Detail/Update</button>
+		</td>
+	</tr>
+
+
+</table>
+
+
+
+
+<div id='supportTicketCreateTemplate' class='labelsAsBreaks  alignedLabels alignedInputs'>
+
+<form action='#'>
+<fieldset class=' marginBottom'>
+	<label><span>Subject: </span><input type='text' name='subject'  required='required' /></label>
+	<label><span>Topic: </span><select name='topic' required='required' data-app-event='admin_support|showTopicInputs'>
+		<option></option>
+		<option value='admin'>Admin/user interface</option>
+		<option value='storefront'>Website</option>
+		<option value='billing'>Billing</option>
+		<option value='DNS'>Domain name</option>
+		<option value='other '>Other</option>
+		</select>
+	</label>
+</fieldset>
+
+
+<fieldset class='displayNone topicInputs marginBottom' data-app-role='storefront_inputs'>
+	<legend>Storefront</legend>
+	<label><span>Domain: </span><input type='url' name='storefront_domain' data-validation-rules='skipIfHidden' required='required' /></label>
+	<label><span>Steps to reproduce: </span><textarea name='storefront_steps2reproduce' data-validation-rules='skipIfHidden' required='required'></textarea></label>
+</fieldset>
+
+
+<fieldset class='displayNone topicInputs marginBottom' data-app-role='DNS_inputs'>
+	<legend>Domain/DNS</legend>
+	<label><span>Domain: </span><input type='url' name='DNS_domain'  data-validation-rules='skipIfHidden' required='required' /></label>
+</fieldset>
+
+<fieldset class='displayNone' data-app-role='phoneFieldset'>
+	<label><span>Phone: </span><input type='tel' name='phone' data-validation-rules='skipIfHidden' required='required' /></label>
+</fieldset>
+
+<fieldset>
+
+		<label><span>Description of issue: </span><textarea name='description' required='required' row='10'></textarea></label>
+
+		<div class='marginBottom'>
+		Priority:
+		<label><input type='radio' name='priority' value='LOW' checked='checked' data-app-event='admin_support|tagAsPriority' /><b>Normal:</b> information needed.</label>
+		<label><input type='radio' name='priority' value='MED' data-app-event='admin_support|tagAsPriority' /><b>Escalated:</b> need assistance as soon as possible.</label>
+		<label><input type='radio' name='priority' value='HIGH' data-app-event='admin_support|tagAsPriority' /><b>Urgent:</b> emergency only (site is down, no work around).</label>
+		</div>
+<!--
+		<div class='marginBottom'>
+<label class='clearfix marginBottom'><input type='checkbox' name='private' />Private: hide ticket for other users.</label>
+<label class='clearfix marginBottom'><input type='checkbox' name='callback' />Callback: please have a support technician contact me.</label>
+		</div>
+
+-->
+</fieldset>
+
+<button class='floatRight ui-state-highlight' data-app-event="admin_support|execTicketCreate">Create Ticket</button>
+<button class='floatRight marginRight' data-app-event="admin_support|showFileAttachmentModal">Attach Files</button>
+<button data-app-event="admin|execDialogClose">Cancel</button>
+
+<p class='hint'>Please include one issue per ticket. This allows us to route the ticket appropriately.</p>
+<p class='hint'>Also, remember that the more details you provide, the more likely we are to be able to reproduce and resolve.</p>
+
+</form>
+
+</div>
+
+
+
+
+
+
+
+<div id='supportTicketDetailTemplate'>
+
+	<h3 data-bind="var: ticket(SUBJECT); format:text; pretext: Subject: ;"></h3>
+	<div>
+		Opened on 
+		<span data-bind="var: ticket(CREATED_GMT); format:epoch2pretty;"></span>
+		<span data-bind="var: ticket(LUSER); format:text; pretext: by ;"></span>
+	</div>
+	<div data-bind="var: ticket(LAST_FOLLOWUP); format:text; pretext: Last Update: ;"></div>
+	<div><b data-bind="var: ticket(CLOSED_GMT); format:epoch2pretty; pretext: Closed: ;"></b></div>
+	<div data-bind="var: ticket(DISPOSITION); format:text; pretext: Disposition: ;"></div>
+	<h5 class='noPadOrMargin'>Original Message:</h5>
+	<pre class='preformatted marginTop marginBottom' data-bind="var: ticket(NOTES); format:text;"></pre>
+	
+	
+	<table class='fullWidth gridTable marginBottom'>
+		<tbody data-bind="var: ticket(@FOLLOWUPS); format:processList; loadsTemplate:supportTicketFollowupTemplate;"></tbody>
+	</table>
+	
+	<div class='labelsAsBreaks alignedLabels alignedInputs'>
+	<button data-app-event="admin_support|showFileAttachmentModal" class='marginBottom'>Add File(s) To Ticket</button><!-- intentionally outside the form. form is emptied on update -->
+	<form>
+	<fieldset>
+		<legend>Provide Additional Information:</legend>
+		<label><span>Message: </span><textarea name='note' required='required'></textarea></label>
+	</fieldset>
+	<button data-app-event='admin_support|execTicketUpdate'>Add Message To Ticket</button>
+	</form>
+	</div>
+
+
+</div>
+
+
+<table>
+<tr id='supportTicketFollowupTemplate'>
+	<td class='valignTop'>
+	<div data-bind="var: ticket(who); format:text; pretext: from: ;"></div>
+	<div data-bind="var: ticket(when); format:text; pretext: on: ;" class='smallTxt'></div>
+	<img src='blank.gif' width='100' height='100' alt='' data-bind="var: ticket(who-pic); format:imageURL;" />
+	</td>
+	<td class='valignTop'>
+	<pre class='marginLeft preformatted' data-bind="var: ticket(txt); format:text;"></pre>
+	</td>
+</tr>
+
+</table>
+
+
+
+
+
+
+<!--
+
+########################################################
+
+
+WEBDOC
+
+########################################################
+
+
+-->
+
+
+
+
+
+
+
+<div id='helpPageTemplate' class='page pageHelp' data-app-role='dualModeContainer' data-app-mode='list'>
+
+	<section class='dualModeDetailContainer' data-app-role='dualModeDetail' data-dualmode-widthpercent='70'></section>
+
+	<section class='dualModeListContainer' data-app-role='dualModeList'>
+		<div class='ui-widget-header ui-corner-top'>
+		
+			<div class='buttonSet'>
+			<form class='searchBar floatRight' action='#' data-app-role='helpSearch'>
+				<input type='text' name='keywords' class='hideInDetailMode'  />
+				<button data-app-event='admin_support|execHelpSearch' class='hideInDetailMode'>Search</button>
+				<button data-app-event='admin|toggleDualMode'>Toggle between list and detail view</button>
+			</form>
+			</div>
+			
+			
+			<h3 class='heading'>Documentation</h3>
+		</div>
+		
+		<div class='ui-widget-content ui-corner-bottom'>
+		
+		<div class='dualModeListMessaging stdPadding'>Please use the search above to find the docs you are looking for.</div>
+		
+		<table class='gridTable fullWidth displayNone marginBottom' >
+		<thead>
+		<tr>
+			<th class='alignLeft'>Title</th>
+			<th class='alignLeft hideInDetailMode'>Summary</th>
+			<th class='alignLeft hideInDetailMode'>Relevance</th>
+			<th ></th>
+		</tr>
+		</thead>
+		<tbody data-bind="var: users(@RESULTS); format:processList; loadsTemplate:helpSearchResultsTemplate;" class='dualModeList' data-app-role='dualModeListContents'></tbody>
+		</table>
+		</div>
+	</section>
+</div>
+
+
+<!-- onClick="app.ext.admin_support.a.showHelpDocInDialog($(this).data('docid'));" -->
+<table>
+<tr id='helpSearchResultsTemplate' >
+	<td data-bind='var: help(title); format:text;' class='lookLikeLink' data-app-event="admin_support|showHelpDetail"></td>
+	<td class='hideInDetailMode' data-bind='var: help(summary); format:text;'></td>
+	<td class='hideInDetailMode' data-bind='var: help(score); format:text;'></td>
+	<td class='alignRight'>
+<!-- showHelpInDialog only displayed when help opened within a tabContent -->
+	<span class='hideInDetailMode'><button data-app-event="admin_support|showHelpDetailInDialog" class='showInTabContent'>Open In Dialog</button></span>
+	<button data-app-event="admin_support|showHelpDetail">View</button>
+	</td>
+</tr>
+</table>
+
+
+
+
+
+
+
+<div id='helpDocumentTemplate' class='helpDetail'>
+	<div data-bind="var: help(body); format:text;"></div>
+	
+	<hr />
+	<button data-app-event="admin_support|execHelpDetailEdit">Edit</button>
+	<button data-app-event="admin_support|execHelpDetailHistory">History</button>
+</div>
+
+
+
