pages.json keys must be all lower case

--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@ the homepageTemplate template is loaded into mainContentArea by default when the
 -->
 <div id='homepageTemplate' class='homeTemplate'>
 
-	<div data-bind="var: category(%page.testStr); format: text;"></div>
-	<div data-bind="var: category(%page.testInt); format: text;"></div>
-	<div data-bind="var: category(%page.testObj); format: printTestObjStr; extension:store_gkworld;"></div>
-	<div data-bind="var: category(%page.testArr); format: printTestArrStr; index:0; extension:store_gkwrold;"></div>
+	<div data-bind="var: category(%page.test_str); format: text;"></div>
+	<div data-bind="var: category(%page.test_int); format: text;"></div>
+	<div data-bind="var: category(%page.test_obj); format: printTestObjStr; extension:store_gkworld;"></div>
+	<div data-bind="var: category(%page.test_arr); format: printTestArrStr; index:0; extension:store_gkwrold;"></div>
 
 	<div class="bannerContainer">
 
