--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ the homepageTemplate template is loaded into mainContentArea by default when the
 	<div data-bind="var: category(%page.test_str); format: text;"></div>
 	<div data-bind="var: category(%page.test_int); format: text;"></div>
 	<div data-bind="var: category(%page.test_obj); format: printTestObjStr; extension:store_gkworld;"></div>
-	<div data-bind="var: category(%page.test_arr); format: printTestArrStr; index:0; extension:store_gkwrold;"></div>
+	<div data-bind="var: category(%page.test_arr); format: printTestArrStr; index:0; extension:store_gkworld;"></div>
 
 	<div class="bannerContainer">
 
