--- a/extensions/checkout/required.html
+++ b/extensions/checkout/required.html
@@ -416,7 +416,7 @@ do NOT change the input name or id or checkout will likely break.
 
 <!-- used after a successful checkout.  -->
 
-<div id='chkoutCompletedTemplate' class='checkoutSuccess'>
+<div id='chkoutCompletedTemplate' class='checkoutSuccess contentContainer'>
 
 	<div class='floatRight ocmThirdParty'>
 		<h2>What next?</h2>
