--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ var app = {vars:{
 	"release":"20130430154800",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
 	"baseURL":"", //used in non-local mode.
-	"checkoutAuthMode" : "required",//can be passive, active or required
+	"checkoutAuthMode" : "active",//can be passive, active or required
 	"testURL":"http://www.483b47.snap.zoovy.net/" //used ONLY if protocol is file: (for testing)
 	},u:{},rq:[]};
 
