No Search Results formatting fix

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ $("#appPreView").dialog({
 
 	<div class='logo'><a href='#!category?navcat=.' class='bindByAnchor'><img src='images/logo-369x84.png' width='369' height='84' alt='GKWorld.com' /></a></div>
 	
-	<div class="dynamicbanners alignCenter"></div>
+	<div class="dynamicbanners displayNone"></div>
 	
 	<div class='minicart bevelBox pointer' onClick="showContent('cart',{})">
 		<span class='spriteBG cartIcon'></span>
