Add Frienefit default code

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@ if(document.location.protocol != 'file:')	{
 <link rel="SHORTCUT ICON" href="images/favicon.ico" />
 <link rel="ICON" href="images/favicon.ico" />
 
+
+<script type="text/javascript">
+var frnft_pid = 1335;
+</script>
+<script type="text/javascript" src="//frienefit.com/program/"></script>
+
 <!--
 all css includes need to be after the js that changes the base url.
 css files should be included before any .js file to ensure they are downloaded in parallel
