Banner feature customization upgrade

--- a/index.html
+++ b/index.html
@@ -364,22 +364,9 @@ the homepageTemplate template is loaded into mainContentArea by default when the
 	
 
 	<div class="bannerContainer">
-
-		<div class="topRight pointer"><a title="Click here for Sale Items" onClick="return showContent('category',{'navcat':'.weekly_special.clearance'});"><img alt="Click here for Sale Items" src="images/sale.jpg" height="200" width="300"></a></div>
-
-		<div class="bottomRight pointer"><a title="New Arrivals" onClick="return showContent('category',{'navcat':'.weekly_special.new'});"><img src="images/newArrivals_banner.jpg" alt="New Arrivals" height="200" width="300"></a></div>
-
-		<div id="slideshowContainer">
-			<div id="slideshowNav"></div>
-			<ul id="wideSlideshow" class="pics slideshow pointer">
-				<a title="Shop Anime" onClick="return showContent('category',{'navcat':'.buy.anime'})"><li><img alt="Shop Anime" src="images/shop_anime_by_collection.jpg" height="400" width="900"></li></a>
-				<!-- Blank slide to copy/paste
-				<a title=" " href="URL HERE" class="bannerBind"><li><img alt=" " src="IMAGES/FOO" height="400" width="900"></li></a>
-				-->
-				
-				
-			</ul>
-		</div><!-- /slideshowContainer -->
+		<div class="topRight loadingBG"></div>
+		<div class="bottomRight loadingBG"></div>
+		<div class="main loadingBG"></div>
 	</div><!-- /bannerContainer -->
 	
 	<!--
