Messaging fix, testURL changed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ var app = {vars:{
 	"_clientid":"zmvc",
 	"baseURL":"", //used in non-local mode.
 	"checkoutAuthMode" : "active",//can be passive, active or required
-	"testURL":"http://www.483b47.snap.zoovy.net/" //used ONLY if protocol is file: (for testing)
+	"testURL":"http://www.gkworld.com/" //used ONLY if protocol is file: (for testing)
 	},u:{},rq:[]};
 
 //set base url so images, css, js, etc all load from appropriate location once deployed.
